--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "mitt": "^3.0.0",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
-    "pinia": "^2.0.34",
+    "pinia": "2.1.3",
     "qrcode": "^1.5.1",
     "qs": "^6.11.1",
     "url": "^0.11.0",
